saint-lascivious.github.io: fix pwapp location
Changes to be committed:
 - modified:   .formatted/index.html
 - renamed:    .formatted/pwapp-serviceworker.js -> .formatted/pwapp-serviceworker.min.js
 - renamed:    .formatted/pwapp.js -> .formatted/pwapp.min.js
 - modified:   index.html

--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -60,7 +60,7 @@
     <script type="text/javascript" src="resources/javascript/sainternet.min.js" defer></script>
     <script type="text/javascript" src="resources/javascript/load-fonts.min.js" defer></script>
     <script type="text/javascript" src="resources/javascript/random_phrase.min.js" defer></script>
-    <script type="text/javascript" src="resources/javascript/pwapp.min.js" defer></script>
+    <script type="text/javascript" src="pwapp.min.js" defer></script>
 
     <link rel="prefetch" href="newsandupdates.html" as="document">
     <link rel="prerender" href="newsandupdates.html">
