--- a/.formatted/projects.html
+++ b/.formatted/projects.html
@@ -13,7 +13,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>sainternet.xyz</title>
 
-    <meta name="theme-color" content="#9C27BO">
+    <meta name="theme-color" content="#9C27BO" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#9C27BO" media="(prefers-color-scheme: dark)">
 
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-256x256.png">
@@ -161,10 +162,6 @@
             </p>
             <p>
               The GitHub Pages repository currently hosting this site.
-            </p>
-            <p id="you_are_here">
-              <!-- https://sainternet.xyz/projects#you_are_here -->
-              You are <a href="https://github.com/saint-lascivious/saint-lascivious.github.io/blob/master/projects.html#L151">here</a>.
             </p>
            </div>
         </div>
