--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -13,7 +13,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>Pokémon #265</title>
 
-    <meta name="theme-color" content="#E91C63">
+    <meta name="theme-color" content="#E91C63" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#E91C63" media="(prefers-color-scheme: dark)">
 
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-265-256x256.png">
