--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -13,7 +13,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>Pokémon #404</title>
 
-    <meta name="theme-color" content="#03A9F4">
+    <meta name="theme-color" content="#03A9F4" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#03A9F4" media="(prefers-color-scheme: dark)">
 
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-404-256x256.png">
