saint-lascivious.github.io: index.html csp meta tag test
Changes to be committed:
 - modified:   .formatted/index.html
 - modified:   index.html

--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -8,6 +8,7 @@
   <head>
     <meta name="author" content="saint-lascivious, 'Hayden Pearce'">
     <meta charset="utf-8">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
