--- a/.formatted/technologies.html
+++ b/.formatted/technologies.html
@@ -4,7 +4,7 @@
   license Apache-2.0
   copyright 2022 saint-lascivious
 -->
-<html lang="en-NZ" dir="rtl">
+<html lang="en-NZ" dir="ltr">
   <head>
     <meta name="author" content="saint-lascivious, 'Hayden Pearce'">
     <meta charset="utf-8">
