saint-lascivious.github.io: image links test
Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/index.html
 - modified:   265.html
 - modified:   404.html
 - modified:   index.html

--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -130,7 +130,7 @@
               <source srcset="resources/images/luxio-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
               <source srcset="resources/images/luxio-shiny.png" type="image/png" media="(prefers-color-scheme: dark)">
               <source srcset="resources/images/luxio-shiny.jpg" type="image/jpeg" media="(prefers-color-scheme: dark)">
-              <img src="resources/images/luxio.jpg" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
+              <a href="pokedexoverdns.html#pokedexoverdns" style="cursor:default"><img src="resources/images/luxio.jpg" width="480" height="480" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes."></a>
             </picture>
             <p align="center">
               A wild <b>Luxio</b> appeared!
