--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -121,7 +121,7 @@
               <source srcset="resources/images/wurmple-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
               <source srcset="resources/images/wurmple-shiny.png" type="image/png" media="(prefers-color-scheme: dark)">
               <source srcset="resources/images/wurmple-shiny.jpg" type="image/jpeg" media="(prefers-color-scheme: dark)">
-              <img src="resources/images/wurmple.jpg" width="480" height="480" alt="Image supplied not illustrative, the author is not a Pokémon.">
+              <a href="pokedexoverdns.html#pokedexoverdns" style="cursor:default"><img src="resources/images/wurmple.jpg" width="480" height="480" alt="Image supplied not illustrative, the author is not a Pokémon."></a>
             </picture>
             <p align="center">
               Welcome to Sainternet.
