--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -116,12 +116,14 @@
           <div class="sainternet-content mdl-shadow--16dp content mdl-cell mdl-cell--8-col">
             <h3><span class="embiggen">Welcome</span></h3>
             <picture>
-              <source srcset="resources/images/wurmple.webp" type="image/webp" media="(prefers-color-scheme: light)">
-              <source srcset="resources/images/wurmple.png" type="image/png" media="(prefers-color-scheme: light)">
-              <source srcset="resources/images/wurmple-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
-              <source srcset="resources/images/wurmple-shiny.png" type="image/png" media="(prefers-color-scheme: dark)">
-              <source srcset="resources/images/wurmple-shiny.jpg" type="image/jpeg" media="(prefers-color-scheme: dark)">
-              <a href="pokedexoverdns.html#pokedexoverdns" style="cursor:default"><img src="resources/images/wurmple.jpg" width="480" height="480" alt="Image supplied not illustrative, the author is not a Pokémon."></a>
+              <a href="pokedexoverdns.html#pokedexoverdns" style="cursor:default">
+                <source srcset="resources/images/wurmple.webp" type="image/webp" media="(prefers-color-scheme: light)">
+                <source srcset="resources/images/wurmple.png" type="image/png" media="(prefers-color-scheme: light)">
+                <source srcset="resources/images/wurmple-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)">
+                <source srcset="resources/images/wurmple-shiny.png" type="image/png" media="(prefers-color-scheme: dark)">
+                <source srcset="resources/images/wurmple-shiny.jpg" type="image/jpeg" media="(prefers-color-scheme: dark)">
+                <img src="resources/images/wurmple.jpg" width="480" height="480" alt="Image supplied not illustrative, the author is not a Pokémon.">
+              </a>
             </picture>
             <p align="center">
               Welcome to Sainternet.
