saint-lascivious.github.io: projects theme colour test, minors
Changes to be committed:
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/projects.html
 - modified:   newsandupdates.html
 - modified:   projects.html
 - modified:   resources/icons/projects-192x192.png
 - modified:   robots.txt
 - modified:   sainternet.webmanifest

--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -134,7 +134,10 @@
               It's a webpage, it's an app, it's progressive, it's a Progressive Web App!
             </p>
             <p>
-              Continuing the trend in honing my skills and adopting modern concepts in the Sainternet ecosystem, and given that this site gradually met all the conditions required in order to do so, you can now install this website as an Android, Chrome or Chromium application with offline caching. Why would you want to? Who knows. The point is you can. Behind the scenes the site is also more secure, and now slicker than ever.
+              Continuing the trend in honing my skills and adopting modern concepts in the Sainternet ecosystem, and given that this site gradually met all the conditions required in order to do so, you can now install this website as an Android, Chrome or Chromium application with offline caching.
+            </p>
+            <p>
+              Why would you want to? Who knows. The point is you can. Behind the scenes the site is also more secure, and now slicker than ever.
             </p>
            </div>
         </div>
