--- a/.formatted/projects.html
+++ b/.formatted/projects.html
@@ -14,8 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>sainternet.xyz</title>
 
-    <meta name="theme-color" content="#9C27BO" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#9C27BO" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#E91C63" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#E91C63" media="(prefers-color-scheme: dark)">
 
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-256x256.png">
@@ -29,7 +29,7 @@
     <link rel="canonical" href="https://sainternet.xyz/projects.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, sainternet, saint-lascivious, sainternet.xyz">
 
-    <link rel="preload" as="style" href="resources/stylesheets/material.purple-red.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/material.pink-red.min.css">
     <link rel="stylesheet" href="resources/stylesheets/material.purple-red.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/sainternet.min.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.min.css">
