saint-lascivious.github.io: uhhhhhhhm, so, yeah
 - delete and reinstall pwa if desired

Changes to be committed:
 - modified:   pretty much literally everything

--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -134,11 +134,14 @@
               It's a webpage, it's an app, it's progressive, it's a Progressive Web App!
             </p>
             <p>
-              Continuing the trend in honing my skills and adopting modern concepts in the Sainternet ecosystem, and given that this site gradually met all the conditions required in order to do so, you can now install this website as an Android, Chrome or Chromium application with offline caching.
+              Continuing the trend in honing my skills and adopting modern concepts in the Sainternet ecosystem, and given that this site gradually met all the conditions required in order to do so, you can now install this website as an Android, Chrome or Chromium application<sup><a href="#pwasupportdisclaimer">1</a></sup>.
             </p>
             <p>
               Why would you want to? Who knows. The point is you can. Behind the scenes the site is also more secure, and now slicker than ever.
             </p>
+            <ol>
+              <li id="pwasupportdisclaimer">Support on iOS, macOS, and Windows I am not entirely confident about.</li>
+            </ol>
            </div>
         </div>
         <div class="sainternet-container mdl-grid" id="2022metrics">
