--- a/.formatted/reportaproblem.html
+++ b/.formatted/reportaproblem.html
@@ -14,8 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>sainternet.xyz</title>
 
-    <meta name="theme-color" content="#3F51B5" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#3F51B5" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#2196F3" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#2196F3" media="(prefers-color-scheme: dark)">
 
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-256x256.png">
@@ -29,8 +29,8 @@
     <link rel="canonical" href="https://sainternet.xyz/reportaproblem.html">
     <meta name="keywords" content="dns, DNS, dns.sainternet.xyz, doh, DoH, dohttps, DoHTTPS, doh/3, DoH/3, dohttp/3, DoHTTP/3, dot, DoT, dotls, DoTLS, doq, DoQ, doquic, DoQUIC, 'filtered dns', 'filtered DNS', 'Hayden Pearce', pokedex, Pokedex, pokédex, Pokédex, saint, sainternet, saint-lascivious, sainternet.xyz">
 
-    <link rel="preload" as="style" href="resources/stylesheets/material.indigo-red.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/material.indigo-red.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/material.blue-red.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/material.blue-red.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/sainternet.min.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/ribbons.min.css">
@@ -101,7 +101,7 @@
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
         </nav>
       </div>
-      <div class="ribbon indigo-ribbon"></div>
+      <div class="ribbon blue-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
