saint-lascivious.github.io: break things, too many to remember
Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/pwapp-serviceworker.min.js
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   pwapp-serviceworker.min.js
 - modified:   reportaproblem.html
 - renamed:    resources/fontawesome/css/brands.css -> resources/fontawesome/css/.formatted/brands.min.css
 - renamed:    resources/fontawesome/css/fontawesome.css -> resources/fontawesome/css/.formatted/fontawesome.min.css
 - renamed:    resources/fontawesome/css/solid.css -> resources/fontawesome/css/.formatted/solid.min.css
 - modified:   resources/fontawesome/css/brands.min.css
 - modified:   resources/fontawesome/css/fontawesome.min.css
 - modified:   resources/fontawesome/css/solid.min.css
 - modified:   resources/javascript/.formatted/headers.min.js
 - modified:   resources/javascript/headers.min.js
 - deleted:    resources/screenshots/sainternet.webp
 - modified:   sainternet.webmanifest
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -8,9 +8,6 @@
   <head>
     <meta name="author" content="saint-lascivious, 'Hayden Pearce'">
     <meta charset="utf-8">
-    <meta http-equiv="Cache-Control" content="max-age=1209600">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self';font-src 'self' fonts.gstatic.com;style-src 'self' fonts.googleapis.com">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>sainternet.xyz</title>
@@ -62,6 +59,7 @@
     <link rel="preload" as="style" href="resources/fontawesome/css/brands.min.css">
     <link rel="stylesheet" href="resources/fontawesome/css/brands.min.css">
 
+    <script type="text/javascript" src="resources/javascript/headers.min.js" async></script>
     <script type="text/javascript" src="resources/javascript/material.min.js" defer></script>
     <script type="text/javascript" src="resources/javascript/sainternet.min.js" defer></script>
     <script type="text/javascript" src="resources/javascript/load-fonts.min.js" defer></script>
