--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -8,9 +8,6 @@
   <head>
     <meta name="author" content="saint-lascivious, 'Hayden Pearce'">
     <meta charset="utf-8">
-    <meta http-equiv="Cache-Control" content="max-age=1209600">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self';font-src 'self' fonts.gstatic.com;style-src 'self' fonts.googleapis.com">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>Pokémon #404</title>
@@ -67,6 +64,7 @@
     <link rel="preload" as="image" href="resources/images/luxio.webp" type="image/webp">
     <link rel="preload" as="image" href="resources/images/luxio-shiny.webp" type="image/webp">
 
+    <script type="text/javascript" src="resources/javascript/headers.min.js" async></script>
     <script type="text/javascript" src="resources/javascript/material.min.js" defer></script>
     <script type="text/javascript" src="resources/javascript/sainternet.min.js" defer></script>
     <script type="text/javascript" src="resources/javascript/load-fonts.min.js" defer></script>
