--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Sainternet offers validating, recursive, caching, mostly specification compliant, filtered DNS servers with a zero logging policy served over all your favourite acronyms.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Pokémon #404</title>
+    <title>sainternet.xyz</title>
 
     <meta name="theme-color" content="#00BCD4" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#00BCD4" media="(prefers-color-scheme: dark)">
@@ -114,12 +114,8 @@
           <a class="embiggen mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
-          <a class="embiggen mdl-navigation__link" href="projects.html">Projects</a>
-        </nav>
-        <span class="embiggen mdl-layout-title">???</span>
-        <nav class="mdl-navigation">
-          <a class="embiggen mdl-navigation__link" href="265.html#pokemon265">???</a>
-          <a class="embiggen mdl-navigation__link" href="#pokemon404"><b>???</b></a>
+          <a class="embiggen mdl-navigation__link" href="#pokemon265"><b> - Pokémon #404</b></a>
+          <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
         </nav>
       </div>
       <div class="ribbon cyan-ribbon"></div>
@@ -128,7 +124,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--8dp content mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#pokemon404"><b>Pokémon #404</b></a><br><a class="embiggen" href="#example">Example Queries</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a> &gt; <a class="embiggen" href="#pokemon404"><b>Pokémon #404</b></a><br><a class="embiggen" href="#example">Example Queries</a>
             </div>
           </div>
         </div>
